--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Single Page Design</title>
         <style>
             .img-mobile :hover{
-                background-color: lightslategray;
+                background-color:grey;
                 padding: 10px;
                 border:solid;
                 border-radius: 10px;
